overview truncate fix

--- a/src/app/shared/components/tiles/tiles.component.scss
+++ b/src/app/shared/components/tiles/tiles.component.scss
@@ -45,9 +45,9 @@
   text-overflow: ellipsis;
   position: relative;
   line-height: 1.5em;
-  max-height: 12.5em;
+  max-height: 18.5em;
   margin: 12px 0;
-  background: linear-gradient(black 250px, #ffffffcc);
+  background: linear-gradient(black 200px, #ffffffcc);
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
